# cas.spc

./: .gitignore  AGENTS.md  DEMO.md  LICENSE  PILOT_SPEC.md  README.md  ROADMAP.md  TASKS.md  pyproject.toml
Planning/: SPC Brainstorm v0.2.docx
examples/: ai_coding_assistant.txt
schemas/: projection.schema.json  reasoning_receipt.schema.json  semantic_patch.schema.json  semantic_state.schema.json  transform_record.schema.json  validation_report.schema.json
src/spc_state/: __init__.py  cli.py  config.py  demo.py  memo.py  tokens.py
src/spc_state/audit/: __init__.py  log.py
src/spc_state/baseline/: __init__.py  pipeline.py
src/spc_state/diff/: __init__.py  diff.py
src/spc_state/evaluation/: __init__.py  metrics.py  report.py
src/spc_state/models/: __init__.py  enums.py  objects.py  patch.py  projection.py  receipt.py  schema_export.py  state.py  transform.py  validation.py
src/spc_state/operators/: __init__.py  _assembly.py  base.py  contradiction_llm.py  critic.py  critic_llm.py  extract.py  extract_llm.py  (+4 more)
tests/: _demo_helpers.py  conftest.py  test_baseline.py  test_commit.py  test_config.py  test_contradiction_llm.py  test_demo.py  test_diff.py  test_evaluation.py  test_extract_llm.py  test_followups.py  test_l1_validation.py  test_l2_validation.py  test_memo.py  test_mock_provider.py  test_models_construction.py  test_openrouter_provider.py  test_operator_cannot_mutate_state.py  test_planner_critic_llm.py  test_projection_builder.py  test_projection_invariant.py  test_receipt.py  test_retriever.py  test_round_trip.py  test_router.py  test_runtime_full_run.py  test_runtime_llm_retry.py  test_schema_export.py  test_smoke.py  test_state_frozen.py
tests/fixtures/: reasoning_receipt_demo.md  semantic_patch_critic.json  semantic_state_v001.json
(+26 files in other folders)
