[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "spc-state"
version = "0.1.0"
description = "SPC Shared Semantic State Engine — pilot implementation of the Semantic Processing Computer's persistent semantic state, semantic patches, and Reasoning Receipts."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Daniel Wipert" }]
license = { file = "LICENSE" }
keywords = ["semantic-state", "compound-ai", "reasoning-receipt", "spc"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
# Provider deps gated for later phases; users opt in.
# OpenRouter is OpenAI-compatible, so it reuses the `openai` SDK.
openrouter = ["openai>=1.40"]

[project.scripts]
spc-demo = "spc_state.cli:app"

[project.urls]
Homepage = "https://github.com/danielwipert/cas.spc"
Source = "https://github.com/danielwipert/cas.spc"

[tool.hatch.build.targets.wheel]
packages = ["src/spc_state"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
